--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
     "pinia": "^2.0.33",
     "stylus": "^0.59.0",
